...
                                                    <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jXu-KA-nkW" userLabel="Input Ecuation A">
                                                        <rect key="frame" x="28" y="12" width="263" height="26"/>
                                                        <accessibility key="accessibilityConfiguration" label="InputA"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NTt-VD-mes" userLabel="Input Ecuation B">
                                                        <rect key="frame" x="28" y="12" width="260" height="26"/>
                                                        <accessibility key="accessibilityConfiguration" label="InputB"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FtE-yW-Egu" userLabel="Input Ecuation C">
                                                        <rect key="frame" x="28" y="13" width="263" height="26"/>
                                                        <accessibility key="accessibilityConfiguration" label="InputC"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rt0-Lf-tbv" userLabel="Solving Button">
                                                        <rect key="frame" x="132" y="12.5" width="88" height="25.5"/>
                                                        <state key="normal" title="Resolver"/>
                                                        <connections>
                                                            <action selector="solvingButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WZE-OE-HWk"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dcN-FU-Z0l" userLabel="Input Root 1">
                                                        <rect key="frame" x="60" y="13" width="239.5" height="25"/>
                                                        <accessibility key="accessibilityConfiguration" label="InputR1"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sZr-yG-7ck" userLabel="Input Root 2">
                                                        <rect key="frame" x="60" y="12.5" width="239.5" height="25.5"/>
                                                        <accessibility key="accessibilityConfiguration" label="InputR2"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
...
